Updated from Android 6, more Android-ish