@@ -26,219 +26,224 @@ import mindroid.os.IInterface;
 public interface IServiceManager extends IInterface {
 	public static abstract class Stub extends Binder implements IServiceManager {
 		private static final java.lang.String DESCRIPTOR = "mindroid.os.IServiceManager";
-		
+
 		public Stub() {
 			this.attachInterface(this, DESCRIPTOR);
 		}
-		
+
 		public static IServiceManager asInterface(IBinder binder) {
 			if (binder == null) {
 				return null;
 			}
 			return new IServiceManager.Stub.SmartProxy(binder);
 		}
-		
+
 		public IBinder asBinder() {
 			return this;
 		}
-		
+
 		protected Object onTransact(int what, int arg1, int arg2, Object obj, Bundle data) throws RemoteException {
 			switch (what) {
 			case MSG_START_SERVICE: {
-				ComponentName caller = (ComponentName) data.getObject("caller");
-				Intent service = (Intent) data.getObject("intent");
-				ComponentName component;
-				if (caller != null) {
-					component = startService(caller, service);
-				} else {
-					component = startService(service);
-				}
+				Intent intent = (Intent) obj;
+				ComponentName component = startService(intent);
 				return component;
 			}
 			case MSG_STOP_SERVICE: {
-				ComponentName caller = (ComponentName) data.getObject("caller");
-				Intent service = (Intent) data.getObject("intent");
-				boolean result;
-				if (caller != null) {
-					result = stopService(caller, service);
-				} else {
-					result = stopService(service);
-				}
-				return new Boolean(result);
+				Intent intent = (Intent) obj;
+				boolean result = stopService(intent);
+				return Boolean.valueOf(result);
 			}
 			case MSG_BIND_SERVICE: {
-				ComponentName caller = (ComponentName) data.getObject("caller");
-				Intent service = (Intent) data.getObject("intent");
+				Intent intent = (Intent) data.getObject("intent");
 				ServiceConnection conn = (ServiceConnection) data.getObject("conn");
 				int flags = data.getInt("flags");
-				boolean result = bindService(caller, service, conn, flags);
-				return new Boolean(result);
+				IBinder binder = data.getBinder("binder");
+				boolean result = bindService(intent, conn, flags, IRemoteCallback.Stub.asInterface(binder));
+				return Boolean.valueOf(result);
 			}
 			case MSG_UNBIND_SERVICE: {
-				ComponentName caller = (ComponentName) data.getObject("caller");
-				Intent service = (Intent) data.getObject("service");
+				Intent intent = (Intent) data.getObject("intent");
 				ServiceConnection conn = (ServiceConnection) data.getObject("conn");
-				unbindService(caller, service, conn);
+				IBinder binder = data.getBinder("binder");
+				if (binder == null) {
+					unbindService(intent, conn);
+				} else {
+					unbindService(intent, conn, IRemoteCallback.Stub.asInterface(binder));
+				}
 				return null;
 			}
 			case MSG_START_SYSTEM_SERVICE: {
-				Intent service = (Intent) obj;
-				ComponentName component = startSystemService(service);
+				Intent intent = (Intent) obj;
+				ComponentName component = startSystemService(intent);
 				return component;
 			}
 			case MSG_STOP_SYSTEM_SERVICE: {
-				Intent service = (Intent) obj;
-				boolean result = stopSystemService(service);
-				return new Boolean(result);
+				Intent intent = (Intent) obj;
+				boolean result = stopSystemService(intent);
+				return Boolean.valueOf(result);
 			}
 			default:
-			    return super.onTransact(what, arg1, arg2, obj, data);
+				return super.onTransact(what, arg1, arg2, obj, data);
 			}
 		}
-		
+
 		private static class Proxy implements IServiceManager {
-			private final IBinder mBinder;
-			
-			Proxy(IBinder binder) {
-				mBinder = binder;
-			}
-			
-			public IBinder asBinder() {
-				return mBinder;
-			}
-			
-			public ComponentName startService(Intent service) throws RemoteException {
-				return startService(null, service);
-			}
-			
-			public boolean stopService(Intent service) throws RemoteException {
-				return stopService(null, service);
-			}
-			
-			public ComponentName startService(ComponentName caller, Intent service) throws RemoteException {
-				Bundle data = new Bundle();
-				data.putObject("caller", caller);
-				data.putObject("intent", service);
-				return (ComponentName) mBinder.transact(MSG_START_SERVICE, data, 0);
-			}
-			
-			public boolean stopService(ComponentName caller, Intent service) throws RemoteException {
-				Bundle data = new Bundle();
-				data.putObject("caller", caller);
-				data.putObject("intent", service);
-				Boolean result = (Boolean) mBinder.transact(MSG_STOP_SERVICE, data, 0);
-				return result.booleanValue();
-			}
-			
-			public boolean bindService(ComponentName caller, Intent service, ServiceConnection conn, int flags) throws RemoteException {
-				Bundle data = new Bundle();
-				data.putObject("caller", caller);
-				data.putObject("intent", service);
-				data.putObject("conn", conn);
-				data.putInt("flags", flags);
-				Boolean result = (Boolean) mBinder.transact(MSG_BIND_SERVICE, data, 0);
-				return result.booleanValue();
-			}
-			
-			public void unbindService(ComponentName caller, Intent service, ServiceConnection conn) throws RemoteException {
-				Bundle data = new Bundle();
-				data.putObject("caller", caller);
-				data.putObject("service", service);
-				data.putObject("conn", conn);
-				mBinder.transact(MSG_UNBIND_SERVICE, data, FLAG_ONEWAY);
+			private final IBinder mRemote;
+
+			Proxy(IBinder remote) {
+				mRemote = remote;
 			}
 
-			public ComponentName startSystemService(Intent service) throws RemoteException {
-				ComponentName component = (ComponentName) mBinder.transact(MSG_START_SYSTEM_SERVICE, service, 0);
+			public IBinder asBinder() {
+				return mRemote;
+			}
+
+			public boolean equals(final Object obj) {
+				if (obj == null) return false;
+				if (obj == this) return true;
+				if (obj instanceof Proxy) {
+					final Proxy that = (Proxy) obj;
+					return this.mRemote.equals(that.mRemote);
+				}
+				return false;
+			}
+
+			public int hashCode() {
+				return mRemote.hashCode();
+			}
+
+			public ComponentName startService(Intent intent) throws RemoteException {
+				return (ComponentName) mRemote.transact(MSG_START_SERVICE, intent, 0);
+			}
+
+			public boolean stopService(Intent intent) throws RemoteException {
+				Boolean result = (Boolean) mRemote.transact(MSG_STOP_SERVICE, intent, 0);
+				return result.booleanValue();
+			}
+
+			public boolean bindService(Intent intent, ServiceConnection conn, int flags, IRemoteCallback callback) throws RemoteException {
+				Bundle data = new Bundle();
+				data.putObject("intent", intent);
+				data.putObject("conn", conn);
+				data.putInt("flags", flags);
+				data.putBinder("binder", callback.asBinder());
+				Boolean result = (Boolean) mRemote.transact(MSG_BIND_SERVICE, data, 0);
+				return result.booleanValue();
+			}
+
+			public void unbindService(Intent intent, ServiceConnection conn) throws RemoteException {
+				Bundle data = new Bundle();
+				data.putObject("intent", intent);
+				data.putObject("conn", conn);
+				mRemote.transact(MSG_UNBIND_SERVICE, data, FLAG_ONEWAY);
+			}
+
+			public void unbindService(Intent intent, ServiceConnection conn, IRemoteCallback callback) throws RemoteException {
+				Bundle data = new Bundle();
+				data.putObject("intent", intent);
+				data.putObject("conn", conn);
+				data.putBinder("binder", callback.asBinder());
+				mRemote.transact(MSG_UNBIND_SERVICE, data, FLAG_ONEWAY);
+			}
+
+			public ComponentName startSystemService(Intent intent) throws RemoteException {
+				ComponentName component = (ComponentName) mRemote.transact(MSG_START_SYSTEM_SERVICE, intent, 0);
 				return component;
 			}
 
-			public boolean stopSystemService(Intent service) throws RemoteException {
-				Boolean result = (Boolean) mBinder.transact(MSG_STOP_SYSTEM_SERVICE, service, 0);
+			public boolean stopSystemService(Intent intent) throws RemoteException {
+				Boolean result = (Boolean) mRemote.transact(MSG_STOP_SYSTEM_SERVICE, intent, 0);
 				return result.booleanValue();
 			}
 		}
-		
+
 		private static class SmartProxy implements IServiceManager {
-			private final IBinder mBinder;
+			private final IBinder mRemote;
 			private final IServiceManager mStub;
 			private final IServiceManager mProxy;
-			
-			SmartProxy(IBinder binder) {
-				mBinder = binder;
-				mStub = (IServiceManager) binder.queryLocalInterface(DESCRIPTOR);
-				mProxy = new IServiceManager.Stub.Proxy(binder);
+
+			SmartProxy(IBinder remote) {
+				mRemote = remote;
+				mStub = (IServiceManager) remote.queryLocalInterface(DESCRIPTOR);
+				mProxy = new IServiceManager.Stub.Proxy(remote);
 			}
-			
+
 			public IBinder asBinder() {
-				return mBinder;
+				return mRemote;
 			}
-			
-			public ComponentName startService(Intent service) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.startService(service);
-				} else {
-					return mProxy.startService(service);
+
+			public boolean equals(final Object obj) {
+				if (obj == null) return false;
+				if (obj == this) return true;
+				if (obj instanceof SmartProxy) {
+					final SmartProxy that = (SmartProxy) obj;
+					return this.mRemote.equals(that.mRemote);
 				}
+				return false;
 			}
-			
-			public boolean stopService(Intent service) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.stopService(service);
-				} else {
-					return mProxy.stopService(service);
-				}
+
+			public int hashCode() {
+				return mRemote.hashCode();
 			}
-			
-			public ComponentName startService(ComponentName caller, Intent service) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.startService(caller, service);
+
+			public ComponentName startService(Intent intent) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					return mStub.startService(intent);
 				} else {
-					return mProxy.startService(caller, service);
-				}
-			}
-			
-			public boolean stopService(ComponentName caller, Intent service) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.stopService(caller, service);
-				} else {
-					return mProxy.stopService(caller, service);
-				}
-			}
-			
-			public boolean bindService(ComponentName caller, Intent service, ServiceConnection conn, int flags) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.bindService(caller, service, conn, flags);
-				} else {
-					return mProxy.bindService(caller, service, conn, flags);
-				}
-			}
-			
-			public void unbindService(ComponentName caller, Intent service, ServiceConnection conn) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					mStub.unbindService(caller, service, conn);
-				} else {
-					mProxy.unbindService(caller, service, conn);
+					return mProxy.startService(intent);
 				}
 			}
 
-			public ComponentName startSystemService(Intent service) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.startSystemService(service);
+			public boolean stopService(Intent intent) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					return mStub.stopService(intent);
 				} else {
-					return mProxy.startSystemService(service);
+					return mProxy.stopService(intent);
 				}
 			}
 
-			public boolean stopSystemService(Intent service) throws RemoteException {
-				if (mBinder.runsOnSameThread()) {
-					return mStub.stopSystemService(service);
+			public boolean bindService(Intent intent, ServiceConnection conn, int flags, IRemoteCallback callback) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					return mStub.bindService(intent, conn, flags, IRemoteCallback.Stub.asInterface(callback.asBinder()));
 				} else {
-					return mProxy.stopSystemService(service);
+					return mProxy.bindService(intent, conn, flags, callback);
+				}
+			}
+
+			public void unbindService(Intent intent, ServiceConnection conn) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					mStub.unbindService(intent, conn);
+				} else {
+					mProxy.unbindService(intent, conn);
+				}
+			}
+
+			public void unbindService(Intent intent, ServiceConnection conn, IRemoteCallback callback) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					mStub.unbindService(intent, conn, IRemoteCallback.Stub.asInterface(callback.asBinder()));
+				} else {
+					mProxy.unbindService(intent, conn, callback);
+				}
+			}
+
+			public ComponentName startSystemService(Intent intent) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					return mStub.startSystemService(intent);
+				} else {
+					return mProxy.startSystemService(intent);
+				}
+			}
+
+			public boolean stopSystemService(Intent intent) throws RemoteException {
+				if (mRemote.runsOnSameThread()) {
+					return mStub.stopSystemService(intent);
+				} else {
+					return mProxy.stopSystemService(intent);
 				}
 			}
 		}
-		
+
 		static final int MSG_START_SERVICE = 1;
 		static final int MSG_STOP_SERVICE = 2;
 		static final int MSG_BIND_SERVICE = 3;
@@ -246,13 +251,18 @@ public interface IServiceManager extends IInterface {
 		static final int MSG_START_SYSTEM_SERVICE = 5;
 		static final int MSG_STOP_SYSTEM_SERVICE = 6;
 	}
-	
-	public ComponentName startService(Intent service) throws RemoteException;
-	public boolean stopService(Intent service) throws RemoteException;
-	public ComponentName startService(ComponentName caller, Intent service) throws RemoteException;
-	public boolean stopService(ComponentName caller, Intent service) throws RemoteException;
-	public boolean bindService(ComponentName caller, Intent service, ServiceConnection conn, int flags) throws RemoteException;
-	public void unbindService(ComponentName caller, Intent service, ServiceConnection conn) throws RemoteException;
-	public ComponentName startSystemService(Intent service) throws RemoteException;
-	public boolean stopSystemService(Intent service) throws RemoteException;
+
+	public ComponentName startService(Intent intent) throws RemoteException;
+
+	public boolean stopService(Intent intent) throws RemoteException;
+
+	public boolean bindService(Intent intent, ServiceConnection conn, int flags, IRemoteCallback callback) throws RemoteException;
+
+	public void unbindService(Intent intent, ServiceConnection conn) throws RemoteException;
+
+	public void unbindService(Intent intent, ServiceConnection conn, IRemoteCallback callback) throws RemoteException;
+
+	public ComponentName startSystemService(Intent intent) throws RemoteException;
+
+	public boolean stopSystemService(Intent intent) throws RemoteException;
 }
